--- a/style.css
+++ b/style.css
@@ -26,8 +26,19 @@ h1 {
   margin: -80px 0 40px;
 }
 
+.year {
+  font-size: 200px;
+  z-index: -1;
+  opacity: 0.2;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .countdown {
-  display: flex;
+  /* display: flex; */
+  display: none;
   transform: scale(2)
 }
 
